@@ -62,7 +62,7 @@ class Raid extends BaseActiveModule
 
         $this->register_command("all", "c", "LEADER");
         $this->register_command("all", "raid", "GUEST");
-        if ($this->bot->game == "ao") {
+        if (AOCHAT_GAME == "ao") {
             $this->register_event("pgleave");
             $this->register_event("pgjoin");
             $this->register_event("buddy");
@@ -72,7 +72,7 @@ class Raid extends BaseActiveModule
 
         $this->register_module("raid");
 
-        if ($this->bot->game == "ao") {
+        if (AOCHAT_GAME == "ao") {
             $this->bot->core("settings")
                 ->create(
                 "Raid", "Remonleave", TRUE,
@@ -110,7 +110,7 @@ class Raid extends BaseActiveModule
             ->create("Raid", "raidtypes", "", "List of Raid Types to show in raid control, use ; to seperate");
         $this->bot->core("settings")
             ->create("Raid", "showlft", TRUE, "show LFT link next to raid join");
-        if ($this->bot->game == "ao") {
+        if (AOCHAT_GAME == "ao") {
             $this->bot->core("settings")
                 ->create("Raid", "inPG", TRUE, "Do users have to be in the PG to join a Raid?");
         }
@@ -688,7 +688,7 @@ class Raid extends BaseActiveModule
         elseif ($this->locked) {
             return "The raid status is currently ##highlight##locked##end##.";
         }
-        elseif ($this->bot->game == "ao"
+        elseif (AOCHAT_GAME == "ao"
             && $this->bot->core("settings")
                 ->get('Raid', 'inpg')
             && !$this->bot->core("online")->in_chat($name)
@@ -877,7 +877,7 @@ class Raid extends BaseActiveModule
                     ->chatcmd("raid notinkick", "raid notinkick") . "\n\n";
 
                 if (!empty($players)) {
-                    if ($this->bot->game == "ao") {
+                    if (AOCHAT_GAME == "ao") {
                         foreach ($players as $player) {
                             if (!empty($assist)) {
                                 $assist .= " \\n /assist $player";
